# aws_fintech

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
airflow/: docker-compose.yml
airflow/dags/: fintech_enterprise_aws_pipeline.py
athena/queries/: currency_breakdown.sql  monthly_volume.sql  top_merchants.sql
data/raw/: cards.csv  clearing.csv  orgs.csv  transactions.csv  users.csv
data_quality/: glue_dq_rules.json
docs/: data_dictionary.md
glue/crawlers/: fintech_enterprise_crawler_config.json
glue/etl/: transform_cards.py  transform_clearing.py  transform_orgs.py  (+2 more)
scripts/: anonymize_data.py  deploy.sh  generate_architecture_diagram.py  teardown.sh  upload_to_s3.sh
streamlit/: app.py  requirements.txt
terraform/: athena.tf  billing.tf  glue.tf  iam.tf  lake_formation.tf  lambda.tf  main.tf  outputs.tf  redshift.tf  s3.tf  tfplan  variables.tf
tests/: test_dq_rules.py  test_transforms.py
upwork_media/: AWS_CONSOLE_SCREENSHOT_GUIDE.md  CAPTURE_CHECKLIST.md  airflow_dag_info.txt  athena_fx_breakdown_result.txt  athena_monthly_volume_result.txt  athena_top_merchants_result.txt  aws_sts_identity.txt  cloudwatch_alarms.txt  glue_catalog_tables.txt  glue_crawler_status.txt  glue_job_runs.txt  iam_roles_summary.txt  lambda_function_info.txt  make_help.txt  pytest_output.txt  pytest_results.txt  redshift_card_utilization.txt  redshift_fx_exposure.txt  redshift_settlement_lag.txt  redshift_spend_by_org.txt  s3_bucket_list.txt  s3_curated_structure.txt  s3_raw_structure.txt  sns_subscriptions.txt  terraform_output.txt  terraform_state_list.txt
(+9 files in other folders)
